# pdf-chat-appliance

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  AGENT_BEST_PRACTICES.md  CHANGELOG.md  CURSOR_RULES.md  Dockerfile  Dockerfile.dev  LICENSE  OWNERS.md  PLANNING.md  README.md  RULES_INDEX.md  RUNN.md  SYSTEM_OVERVIEW.md  TASK.md  TRAINING.md  config.py  docker-compose.dev.yml  docker-compose.yml  load_all.py  nginx.conf  pdfchat.py  pyproject.toml  query_server.py  requirements.txt  run_server.py  session_notes.md  test_documentation_generator.py  test_fastapi_server.py  test_query.py
.ai/: SPRINTS.md  arch.md  prd.md
.ai/epic-1/: epic-1.md  story-1.story.md
.ai/epic-documentation-automation/: epic-documentation-automation.md  story-1.story.md
.ai/epic-observability-enhancement/: epic-observability-enhancement.md
.ai/epic-performance-optimization/: epic-performance-optimization.md
.ai/epic-security-enhancement/: epic-security-enhancement.md
.cursor/: settings.json
.cursor/rules/: agent-flow.mdc  agent-orchestrator.mdc  ai-chief-of-staff.mdc  api-builder.mdc  code-review.mdc  coding-style.mdc  core.mdc  db-specialist.mdc  deployment-monitor.mdc  docs-maintainer.mdc  environment.mdc  global-governance.mdc  hr-coordinator.mdc  llm-config.mdc  llm-specialist.mdc  observability.mdc  project-structure.mdc  prompt-strategy.mdc  python-engineer.mdc  qa-tester.mdc  repo-management.mdc  rule-governor.mdc  security-checks.mdc  senior-dev.mdc  system-architect.mdc  task-manager.mdc  training-lead.mdc  workflow-pdfchat.mdc
.github/ISSUE_TEMPLATE/: bug_report.md
agent-shared/: README.md  advanced-technical-deep-dives.md  archive-monitor-log.json  creative-training-curriculum.md  cross-specialization-curriculum.md  cross-specialization-results.md  diagram-validation-data.json  diagram-validation-report.md  diagramming-tool-eval.md  doc-sanitization-report.md  doc-structure-review.md  docs-db-architecture.md  docs-db-proposal-feedback.md  docs-review.md  enhanced-advanced-technical-deep-dives.md  enhanced-creative-training-curriculum.md  enhanced-cross-specialization-curriculum.md  enhanced-gpu-training-curriculum.md  gap-analysis-post-realignment.md  gpu-training-curriculum.md  hr-validation-report.md  mdc-location-report.md  org-structure-reflection.md  overflow-training.md  ports.md  role-audit-report.md  script-maintenance-feedback.md  structure-alignment-feedback.md  structure-gap-resolutions.md  task-closure-report.md  team-bonding.md  training-day-summary.md
agent-shared/cross-agent/: system-architect_20250706_143022_phase21_completion.json  system-architect_20250706_143045_multi_environment_strategy.json  system-architect_20250706_143130_phase23_completion.json  system-architect_20250706_143200_phase23_summary.json
agent-shared/diagrams/: README.md  org-chart.drawio  org-chart.mmd  pdf-chat-architecture.drawio  pdf-chat-architecture.mmd
agent-shared/test-results/: cleanup_status_20250704_1147.json  cleanup_status_20250704_1150.json  integration-cycle-002-alignment-check.json  test_result_deployment-monitor_20250704_1138_environment_check.json  test_result_llm-specialist_20250704_1139_compatibility_report.md  test_result_system-architect_20250706_143145_gpu_detection.json
archive/legacy_configs/: docker-compose.microservices.yml
archive/legacy_stack/: create_sample_pdf.py  deployment_log.txt  pdfchat.py  timing_harness.py
archive/session_notes/: 2025-07-06_session_scope_deduplication.md  2025-07-06_session_training_completion.md  2025-07-06_session_visual_architecture.md
archive/task_history/: 2025-07-06_task_production_validation.md  2025-07-06_task_tooling_compliance.md
archive/training_history/: 2025-07-06_agent_flow_training_completion.md  2025-07-06_code_review_training_completion.md  2025-07-06_deployment_monitor_training_completion.md  2025-07-06_llm_specialist_training_completion.md  2025-07-06_rule_governor_training_completion.md  2025-07-06_system_architect_training_completion.md  2025-07-06_task_manager_training_completion.md
config/: default.yaml
docker/: README.md
docs/: CHANGELOG.md  DECISION_LOG.md  DOCUMENT_RULES.md  DOC_CHANGELOG.md  ENVIRONMENT_STRATEGY.md  FUTURE_PLANS.md  HEALTH_REPORT.md  INDEX.md  PROJECT_FILES.md  PROJECT_TOOLS.md  README_UPDATES.md  REPO_RESTRUCTURE_PLAN.md  SERVICE_VERSION_MATRIX.md  SHARED_DIRECTORY_USAGE.md  SPRINT_GOALS.md  TEAM_STRUCTURE.md  WSL_SERVICE_READINESS.md  agent-assignments.md  agent-feedback.md  api.md  architecture.md  configuration.md  deployment.md  hr-roster.md  integration-cycle-001.md  integration-cycle-002.md  manual-install.md  memory.md  microservices-architecture.md  script-compliance.md  team-health.md  usage.md
docs/api/: README.md  generated_api.md  reference.md
memory/: __init__.py  api.py  chat_history.py  models.py  sqlite_backend.py
packer/: README.md  ubuntu-template.pkr.hcl
packer/http/: preseed.cfg
pdfchat/: __init__.py  config.py  enterprise_ingestion.py  fastapi_server.py  ingestion.py  server.py  utils.py
scripts/: __init__.py  agent-run.ps1  archive-monitor.py  deploy-microservices-standalone.ps1  deploy-microservices.ps1  deployment-validation.ps1  embed-diagrams.py  embed_all.py  enterprise_performance_test.py  generate_docs.py  health-check.ps1  setup.sh  test-microservices-enterprise.ps1  validate-diagrams.py  validate-hr-assignments.py  validate-mdc-location.py  validate-role-audit.py  wsl_command.ps1
tests/: __init__.py  conftest.py  test_config.py  test_ingestion.py  test_server.py  test_utils.py
tests/memory/: test_api.py  test_models.py  test_persistence.py
training/agent-flow/: learned.md
training/agent-orchestrator/: learned.md
training/api-builder/: learned.md
training/code-review/: learned.md
training/coding-style/: learned.md
training/db-specialist/: learned.md
training/deployment-monitor/: learned.md
training/docs-maintainer/: learned.md
training/environment/: learned.md
training/global-governance/: learned.md
training/llm-config/: learned.md
training/llm-specialist/: learned.md
(+33 files in other folders)
