[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-chat-appliance"
version = "1.0.0"
description = "A production-ready, self-hosted AI appliance for querying PDFs using state-of-the-art LLMs, embeddings, and a modern WebUI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PDF Chat Appliance Team", email = "team@pdfchat.appliance"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.9"
dependencies = [
    "llama-index[all]",
    "chromadb",
    "PyMuPDF",
    "flask",
    "sentence-transformers",
    "typer",
    "pyyaml",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
pdfchat = "pdfchat:app"

[project.urls]
Homepage = "https://github.com/your-org/pdf-chat-appliance"
Documentation = "https://github.com/your-org/pdf-chat-appliance#readme"
Repository = "https://github.com/your-org/pdf-chat-appliance.git"
Issues = "https://github.com/your-org/pdf-chat-appliance/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdfchat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 